[gd_scene load_steps=2 format=3 uid="uid://mrnw8gskf2k5"]

[ext_resource type="Script" uid="uid://en7ok6xt5q5x" path="res://assets/entities/baseInteractable/baseInteractable.gd" id="1_adhkk"]

[node name="BaseInteractable" type="Area3D"]
script = ExtResource("1_adhkk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
